<resources>
    <string name="app_name">HaVagas</string>
    <string name="nome_completo">Nome completo</string>
    <string name="email">Email</string>
    <string name="receber_e_mails_com_atualiza_es_de_oportunidades">Receber E-mails com atualizações de oportunidades</string>
    <string name="telefone">Telefone</string>
    <string name="residencial">Residencial</string>
    <string name="comercial">Comercial</string>
    <string name="adicionar_celular">Adicionar Celular</string>
    <string name="telefone_celular">Telefone Celular</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="forma_o">Formação</string>
    <string name="ano_de_conclus_o">Ano de Conclusão</string>
    <string name="institui_o">Instituição</string>
    <string name="t_tulo_de_monografia">Título de Monografia</string>
    <string name="orientador">Orientador</string>
    <string name="vagas_de_interesse">Vagas de Interesse</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
</resources>