<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainTb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        app:titleTextColor="@color/design_default_color_on_primary"
        android:background="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_completo"/>

                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <CheckBox
                    android:id="@+id/checkBoxReceberEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receber_e_mails_com_atualiza_es_de_oportunidades" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefone"/>

                <EditText
                    android:id="@+id/editTextTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:autofillHints="" />

                <RadioGroup
                    android:id="@+id/radioGroupTipoTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonResidencial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/residencial" />

                    <RadioButton
                        android:id="@+id/radioButtonComercial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comercial" />

                </RadioGroup>

                <Button
                    android:id="@+id/buttonAdicionarCelular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adicionar_celular"
                    android:onClick="adicionarCelular"/>

                <TextView
                    android:id="@+id/textViewTelefoneCelular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefone_celular"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/editTextTelefoneCelular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo"/>

                <RadioGroup
                    android:id="@+id/rgSex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masculino"/>

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feminino"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_de_nascimento"/>

                <EditText
                    android:id="@+id/editTextDataNascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forma_o"/>

                <Spinner
                    android:id="@+id/spinnerFormacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/formacoes"/>

                <TextView
                    android:id="@+id/textViewAnoConclusao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ano_de_conclus_o"/>

                <EditText
                    android:id="@+id/editTextAnoConclusao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/textViewInstituicao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/institui_o"/>

                <EditText
                    android:id="@+id/editTextInstituicao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/textViewTituloMonografia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_tulo_de_monografia"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/editTextTituloMonografia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textViewOrientador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orientador"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/editTextOrientador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vagas_de_interesse"/>

                <EditText
                    android:id="@+id/editTextVagasInteresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="3"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/limpar"/>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
